--- a/shop.html
+++ b/shop.html
@@ -368,7 +368,7 @@
     </div>
 
     <div class="copyright">
-        <p>@ 2023, Tech2 etc - HTML CSS Ecommerce Templates</p>
+        <p>@ 2023,  Shiv Web Tech</p>
     </div>
 </footer>
 
